:recycle: refactor(env): kakao api key env 파일에서 관리

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,11 +10,9 @@
     <title>Bang-ga-Bang-ga</title>
   </head>
   <body>
-    <script src="../src/constants/ApiUrl.js" defer></script>
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5f967c751c97ed89fb42b8bd73aa14b4&libraries=services"
-      defer></script>
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&libraries=services"></script>
     <div id="root"></div>
   </body>
 </html>
